--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Random Quote Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="quote-button">Get Random Quote</button>
+    <button id="get-quote">Get Random Quote</button>
     <p id="quote-display">Click the button to see a quote!</p>
     <script src="script.js"></script>
 </body>
 </html>
+
