--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
     <p id="quote-display">Click the button to see a quote!</p>
     <script src="script.js"></script>
 </body>
+<body>
+    <button id="popupButton">Show Image</button>
+    
+    <div id="imagePopup" class="popup" style="display: none;">
+        <span id="closeButton">&times;</span>
+        <img src="path/to/your-image.jpg" alt="Popup Image">
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
 
