--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <div id="imagePopup" class="popup" style="display: none;">
         <span id="closeButton">&times;</span>
-        <img src="path/to/your-image.jpg" alt="Popup Image">
+        <img src="https://cdn.britannica.com/77/142177-050-4E8010A9/Albert-Einstein-1947.jpg" alt="Popup Image">
     </div>
 
     <script src="script.js"></script>
