--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <div id="imagePopup" class="popup" style="display: none;">
         <span id="closeButton">&times;</span>
-        <img src="https://cdn.britannica.com/77/142177-050-4E8010A9/Albert-Einstein-1947.jpg" alt="Popup Image">
+        <img src="https://cdn.profoto.com/cdn/053149e/contentassets/d39349344d004f9b8963df1551f24bf4/profoto-albert-watson-steve-jobs-pinned-image-original.jpg?width=1280&quality=75&format=jpg" alt="Popup Image">
     </div>
 
     <script src="script.js"></script>
