--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <button id="popupButton">Show Image</button>
     <div class="flex-container">
-    <div id="imagePopup" class="popup" style="display: none;">
-        <span id="closeButton">&times;</span>
-        <img src="https://cdn.profoto.com/cdn/053149e/contentassets/d39349344d004f9b8963df1551f24bf4/profoto-albert-watson-steve-jobs-pinned-image-original.jpg?width=1280&quality=75&format=jpg" alt="Popup Image">
+        <div id="imagePopup" class="popup" style="display: none;">
+            <span id="closeButton">&times;</span>
+            <img src="https://cdn.profoto.com/cdn/053149e/contentassets/d39349344d004f9b8963df1551f24bf4/profoto-albert-watson-steve-jobs-pinned-image-original.jpg?width=1280&quality=75&format=jpg" alt="Steve Jobs Portrait" loading="lazy">
+        </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
