--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button id="popupButton">Show Image</button>
 <div id="imagePopup" class="popup">
   <span id="closeButton">&times;</span>
-  <img src="https://cdn.profoto.com/cdn/053149e/contentassets/d39349344d004f9b8963df1551f24bf4/profoto-albert-watson-steve-jobs-pinned-image-original.jpg?width=1280&quality=75&format=jpg" alt="Steve Jobs Portrait" alt="Popup Image">
+  <img src="" alt="Steve Jobs Portrait" alt="Popup Image">
 </div>
     <script src="script.js"></script>
 </body>
