--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button id="popupButton">Show Image</button>
 <div id="imagePopup" class="popup">
   <span id="closeButton">&times;</span>
-  <img src="" alt="Steve Jobs Portrait" alt="Popup Image">
+  <img src="profoto-albert-watson-steve-jobs-pinned-image-original.jpg" alt="Steve Jobs Portrait" alt="Popup Image">
 </div>
     <script src="script.js"></script>
 </body>
