--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Quote Generator with Image Popup</title>
+    <title>Random Quote Generator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <button id="get-quote">Get Random Quote</button>
     <p id="quote-display">Click the button to see a quote!</p>
-
+    <script src="script.js"></script>
+</body>
     <button id="popupButton">Show Image</button>
     <div id="imagePopup" class="popup">
         <span id="closeButton">&times;</span>
