--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p id="quote-display">Click the button to see a quote!</p>
     <script src="script.js"></script>
 </body>
+<body>
     <button id="popupButton">Show Image</button>
     <div id="imagePopup" class="popup">
         <span id="closeButton">&times;</span>
