--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quote Generator</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="get-quote">Get Random Quote</button>
-    <p id="quote-display">Click the button to see a quote!</p>
+    <button id="get-quote">Get Quote</button>
+    <p id="quote-display"></p>
+
     <script src="script.js"></script>
-
-
 </body>
 </html>
